# transcript-to-text

./: .gitignore  crawler.py  metadata.json  pyproject.toml  transcribe.ipynb  tts.ipynb
transcripts/: transcript-timestamp.txt
