[project]
name = "eng-tts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.0"
dependencies = [
    "ipykernel>=6.29.5",
    "ipynb>=0.5.1",
    "kokoro>=0.7.16",
    "numba>=0.61.0",
    "numpy>=1.26.4",
    "onnxruntime>=1.20.1",
    "openai-whisper>=20240930",
    "pip>=25.0.1",
    "soundfile>=0.13.1",
    "transformers>=4.49.0",
    "yt-dlp>=2025.2.19",
]
